envs/linerider/src/env/snapshots/linerider__env__tests__checkpoint_obs.snap
---
source: src/env/mod.rs
expression: env.make_obs()
---
[[-2.3845410346984863, 4.731325626373291, -0.0399932861328125, 1.0],
 [-1.926946759223938, 3.884099245071411, 0.22984907031059265, 1.0],
 [-1.4693524837493896, 3.0368728637695313, 0.4996914267539978, 1.0],
 [-1.0117580890655518, 2.1896464824676514, 0.7695338129997253, 1.0],
 [-0.5541638135910034, 1.3424201011657715, 1.039376139640808, 1.0],
 [-0.030786752700805664, 1.0862679481506348, 1.2005860805511475, 4.0],
 [-0.05114436149597168, 2.1541974544525146, 1.336005687713623, 2.0],
 [0.5850124955177307, 2.851156234741211, 1.6669933795928955, 2.0],
 [1.221169352531433, 3.5481150150299072, 1.997981071472168, 2.0],
 [1.8573261499404907, 4.2450737953186035, 2.3289687633514404, 2.0],
 [1.8573261499404907, 4.2450737953186035, 2.3289687633514404, 0.0],
 [-1.0, -1.0, -1.0, -1.0],
 [2.322967529296875, 4.731325626373291, 2.4411654472351074, 4.0]], shape=[13, 4], strides=[4, 1], layout=Cc (0x5), dynamic ndim=2
