envs/linerider/src/env/snapshots/linerider__env__tests__checkpoint_obs_start.snap
---
source: src/env/mod.rs
expression: obs
---
[[-2.3845410346984863, 4.731325626373291, -0.0399932861328125, 1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-0.030786752700805664, 1.0862679481506348, 1.2005860805511475, 4.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [2.322967529296875, 4.731325626373291, 2.4411654472351074, 4.0]], shape=[13, 4], strides=[4, 1], layout=Cc (0x5), dynamic ndim=2
