envs/linerider/src/env/snapshots/linerider__env__tests__obs_history_empty.snap
---
source: src/env/mod.rs
expression: env.make_obs()
---
[[0.0, 0.0, 0.0, 1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [-1.0, -1.0, -1.0, -1.0],
 [3.0, -3.0, 0.0, 4.0]], shape=[12, 4], strides=[4, 1], layout=Cc (0x5), dynamic ndim=2
