envs/linerider/src/env/snapshots/linerider__env__tests__obs_history_filled.snap
---
source: src/env/mod.rs
expression: env.make_obs()
---
[[0.0, 0.0, 0.0, 1.0],
 [1.0, -1.0, 0.0, 2.0],
 [2.0, -2.0, 0.0, 2.0],
 [3.0, -3.0, 0.0, 2.0],
 [4.0, -4.0, 0.0, 2.0],
 [5.0, -5.0, 0.0, 2.0],
 [6.0, -4.5, 0.0, 1.0],
 [7.0, -4.0, 0.0, 1.0],
 [8.0, -4.0, 0.0, 0.0],
 [9.0, -4.0, 0.0, 0.0],
 [10.0, -4.0, 0.0, 1.0],
 [10.399999618530273, -3.5999999046325684, 0.4000000059604645, 4.0]], shape=[12, 4], strides=[4, 1], layout=Cc (0x5), dynamic ndim=2
