envs/linerider/src/env/snapshots/linerider__env__tests__obs_sliding_window.snap
---
source: src/env/mod.rs
expression: env.make_obs()
---
[[7.0, -4.0, 0.0, 1.0],
 [8.0, -4.0, 0.0, 0.0],
 [9.0, -4.0, 0.0, 0.0],
 [10.0, -4.0, 0.0, 1.0],
 [10.399999618530273, -3.5999999046325684, 0.4000000059604645, 4.0]], shape=[5, 4], strides=[4, 1], layout=Cc (0x5), dynamic ndim=2
