envs/linerider/src/env/snapshots/linerider__env__tests__radial_lines.snap
---
source: src/env/mod.rs
expression: env.lines
---
[
    (
        Vec3(
            0.0,
            0.0,
            0.0,
        ),
        1,
    ),
    (
        Vec3(
            0.0,
            -0.10395585,
            -0.4890738,
        ),
        1,
    ),
    (
        Vec3(
            0.12787679,
            -0.4158234,
            -1.9507122,
        ),
        1,
    ),
    (
        Vec3(
            0.12749445,
            -0.41597816,
            -2.1507118,
        ),
        1,
    ),
    (
        Vec3(
            0.04929495,
            -0.41621032,
            -2.4403405,
        ),
        1,
    ),
]
